--- a/snake.yml
+++ b/snake.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: Platane/snk@master
         with:
-          github_user_name: anyy520
+          github_user_name: AnyySantos
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
